--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "axios-plugs",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
+	"main": "src/index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -19,9 +18,11 @@
 	"homepage": "https://github.com/gapkukb/axios-plugs#readme",
 	"dependencies": {
 		"axios": "^0.27.2",
-		"qs": "^6.10.5"
+		"qs": "^6.10.5",
+		"rollup": "^2.75.6"
 	},
 	"devDependencies": {
 		"@types/qs": "^6.9.7"
-	}
+	},
+	"description": ""
 }
