--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	"dependencies": {
 		"axios": "^0.27.2",
 		"qs": "^6.10.5",
-		"rollup": "^2.75.6"
+		"rollup": "^2.75.6",
+		"ts-node": "^10.8.1"
 	},
 	"devDependencies": {
 		"@types/qs": "^6.9.7"
