--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
 	},
 	"homepage": "https://github.com/gapkukb/axios-plugs#readme",
 	"dependencies": {
-		"axios": "^0.27.2",
+		"axios": "^1.3.1",
 		"qs": "^6.10.5",
-		"rollup": "^2.75.6",
-		"ts-node": "^10.8.1"
+		"rollup": "^3.13.0",
+		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
+		"@types/node": "^18.11.18",
 		"@types/qs": "^6.9.7"
 	},
 	"description": ""
