--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-	"name": "axios-plugs",
-	"version": "1.0.0",
-	"main": "src/index.ts",
+	"name": "axios-plus",
+	"version": "0.0.1",
+	"type": "module",
+	"module": "./dist/index.es.js",
+	"main": "./dist/index.es.js",
+	"browser": "./dist/index.es.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/gapkukb/axios-plugs.git"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/gapkukb/axios-plugs/issues"
-	},
-	"homepage": "https://github.com/gapkukb/axios-plugs#readme",
-	"dependencies": {
-		"axios": "^1.3.1",
-		"qs": "^6.10.5",
-		"rollup": "^3.13.0",
-		"ts-node": "^10.9.1"
+		"dev": "vite",
+		"build": "vite build && tsc -p tsconfig.build.json",
+		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.18",
-		"@types/qs": "^6.9.7"
+		"ts-node": "^10.9.2",
+		"typescript": "^5.2.2",
+		"vite": "^5.0.8"
 	},
-	"description": ""
+	"dependencies": {
+		"@types/node": "^20.11.0",
+		"axios": "^1.6.5",
+		"openapi-typescript": "5"
+	}
 }
